# click_captcha

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
click_captcha/: __init__.py  main.py
click_captcha/core/: config.py  redis.py
click_captcha/models/: captcha.py
click_captcha/routes/: __init__.py  captcha.py
click_captcha/schemas/: captcha.py
click_captcha/services/: captcha_service.py  captcha_service.py.bak
click_captcha/static/: index.html
