[tool.poetry]
name = "click-captcha"
version = "0.0.1"
description = "Click Captcha system based on FastAPI"
authors = ["Velctmo"]
package-mode = false

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
python-multipart = "^0.0.6"
pillow = "^10.0.1"
numpy = "^1.25.2"
aioredis = "^2.0.0"
opencv-python = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
types-requests = "^2.31.0.4"
types-redis = "^4.6.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.pyright]
pythonVersion = "3.9"
include = ["click_captcha"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
check_untyped_defs = true
disallow_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["dagou.app.*"]
check_untyped_defs = true
disallow_untyped_defs = false
